# qpointsview

./: CMakeLists.txt  README.md  bench.cpp
example/: main.cpp
include/qpointsview/: QAbstractCamera  QFlyCamera  QPointColorPair  QPointsView  qabstractcamera.h  qflycamera.h  qpointcolorpair.h  qpointsview.h
src/: qabstractcamera.cpp  qflycamera.cpp  qpointsview.cpp  qwidgetcontainer.cpp  qwidgetcontainer.h  qwidgetcontainerprogram.cpp  qwidgetcontainerprogram.h
src/shaders/: render_points.frag  render_points.vert  render_widget.frag  render_widget.vert  shaders.qrc
